Stop tab bar from being scrolled off screen

--- a/css/editor.css
+++ b/css/editor.css
@@ -4,12 +4,11 @@ body {
 }
 #editor {
     /*position: absolute;*/
-    height: 100% !important;
+    height: 90% !important;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    overflow: hidden !important;
 }
 #statusBar {
     margin: 0;
@@ -36,6 +35,5 @@ body {
     height: 100% !important;
     width: 100% !important;
     padding: 0 !important;
-    overflow: hidden !important;
 }
 
